objects/CIP_History_Eligibility__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Domestic_Partner_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Addtl Dom Partner Detail (West Only)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_what_level_will_ID_cards_be_generated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>At what level will ID cards be generated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Eligibility</relationshipLabel>
        <relationshipName>CIP_History_Eligibility</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COBRA_Applies_to_Domestic_Partner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Applies to Domestic Partner?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cal_Cobra_Eligible_Participants__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cal-COBRA Eligible Participants?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chid_Max_Age_Limit_Apply_to_all_packages__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apply to All Packages/Suffixes</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Max_Age_Limit_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Max Age Limit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Max_Age_Rule_Define_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Define Age and Rule per Package/Suffix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_allows_SameSex_Spouses_Covered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client allows SameSex Spouses Covered?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Billing_Impacted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment &amp; Billing Impacted?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusions_Apply__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusions Apply</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Dep_reaches_max_age_auto_terminate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Dep reaches max age, auto terminate?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_indicate_probationary_period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, indicate probationary period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_you_have_a_specific_requirement_to_va__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Variances by package, specify here</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Waiting_Period_for_New_Hires__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is there a Waiting Period for New Hires?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overage_dep_term_ltrs_be_mailed_to_sub__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Overage dep term ltrs be mailed to sub?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_for_Disabled_Verficiation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible for Disabled Verification?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_for_Student_Certificat__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible for Student Certification?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Cert_Responses_Sent_Back_to__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responses Received by?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Define_Age_and_Rule_per_Package__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Define Age and Rule per Package/Suffix2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Max_Age_Limit_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Student Max Age Limit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Max_Limit_Apply_to_all__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apply to All Packages/Suffixes Student M</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_will_handle_Cal_COBRA_billing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Who will handle Cal COBRA billing?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Prem_Employer_Pays_for_Each_Sub_per__c</fullName>
        <label>% of Prem Paid for Each Sub per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Prem_Paid_for_Each_Sub_Dep_per_Mont__c</fullName>
        <label>% Prem Paid for Each Sub Dep per Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CIP History Eligibility</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Eligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Eligibility</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>